--- a/test.html
+++ b/test.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>My App</title>
-  <link href="stylesheets/apps.css" rel="stylesheet"></head>
+  <link href="../webpack/../public/stylesheets/apps.css" rel="stylesheet"></head>
   <body>
     <div id="app"></div>
-    <script type="text/javascript" src="assets/apps.bundle.js"></script>
+    <script type="text/javascript" src="../webpack/../public/assets/apps.bundle.js"></script>
   </body>
 </html>
