--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My App</title>
+    <title>My App test</title>
   <link href="stylesheets/apps.css" rel="stylesheet"></head>
   <body>
     <div id="app"></div>
